[package]
name = "bus_20240330"
version = "0.1.0"
edition = "2021"
default-run = "bus"

[lints.rust]
# unused = "allow"

[dependencies]
bitflags = "2.5.0"
csv = "1.3.0"
inquire = "0.7.5"
time = { version = "0.3.36", features = ["macros", "std", "local-offset", "parsing"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true
